--- a/sass/converse/_chatbox.scss
+++ b/sass/converse/_chatbox.scss
@@ -13,6 +13,23 @@
         }
     }
     .chatbox {
+        .chat-body {
+            .chat-message {
+                margin: 0.3em;
+                line-height: $line-height-large;
+                .chat-msg-author {
+                    line-height: $line-height-large;
+                }
+                .chat-msg-content {
+                    line-height: $line-height-large;
+                    .emojione {
+                        margin-bottom: -5px;
+                    }
+                }
+            }
+        }
+    }
+    .chatbox {
         form.sendXMPPMessage {
             .chat-toolbar {
                 li {
