--- a/sass/converse/_variables.scss
+++ b/sass/converse/_variables.scss
@@ -104,6 +104,7 @@ $emoji-picker-height: 100px !default;
 
 $line-height-small:  14px !default;
 $line-height:  16px !default;
+$line-height-large:  20px !default;
 
 $controlbox-width: 200px !default;
 $chat-width: 200px !default;
